﻿# DotnetToolbar 0.1.68 Release Notes
Release Date: 2023-10-22

## New Features
- Settings Dialog first draft.
- Option general: Block execution of non sdk style projects.
- Option general: Kill all dotnet process before execute.

# DotnetToolbar 0.1.66 Release Notes
Release Date: 2023-10-21

## Bug Fixes
- dotnet publish hang on Non SDK Style projects.

# DotnetToolbar 0.1.65 Release Notes
Release Date: 2023-10-21

## Bug Fixes
- dotnet nuget push removed powershell added local nuget config adds.

# DotnetToolbar 0.1.64 Release Notes
Release Date: 2023-10-21

## Bug Fixes
- dotnet nuget push

# DotnetToolbar 0.1.63 Release Notes
Release Date: 2023-10-20

## New Features
Added dotnet clean

## Enhancements
- Added del bin/obj and Settings menu items for future use.

## Bug Fixes
- Rewritten solution opened event, needed for future settings load save export import

# DotnetToolbar 0.1.61 Release Notes
Release Date: 2023-10-19

## New Features

## Enhancements
- Added https://www.powershellgallery.com/api/v2/package to the list of availible sources.
- Quick rework of the NugetPushDialog.

## Bug Fixes
- Resolved issue where the toolbar didn't execute async

## Upcoming Features
- Auto extract/mod and push .nupkg to https://www.powershellgallery.com/api/v2/package
- Configuration Menu
- dotnet clean
- del bin/obj

