@@ -1,14 +1,21 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-using System.Threading.Tasks;
-
-namespace Coree.VisualStudio.DotnetToolbar
+﻿namespace Coree.VisualStudio.DotnetToolbar
 {
-    public class SolutionSettings
+
+
+    public class SolutionSettingsPublish
+    {
+        public bool PublishSolutionProject { get; set; } = true;
+    }
+
+    public class SolutionSettingsGeneral
     {
         public bool KillAllDotnetProcessBeforeExectue { get; set; } = false;
         public bool BlockNonSdkExecute { get; set; } = true;
+    }
+
+    public class SolutionSettings
+    {
+        public SolutionSettingsGeneral solutionSettingsGeneral { get; set; } = new SolutionSettingsGeneral();
+        public SolutionSettingsPublish solutionSettingsPublish { get; set; } = new SolutionSettingsPublish();
     }
 }
