@@ -1,4 +1,14 @@
-﻿# DotnetToolbar 0.1.68 Release Notes
+﻿# DotnetToolbar 0.1.69 Release Notes
+Release Date: 2023-10-22
+
+## New Features
+- Publish on Solution or Project option to settings
+- Publish solution is default
+
+## Bug Fixes
+- Defaults on settings json changes.
+
+# DotnetToolbar 0.1.68 Release Notes
 Release Date: 2023-10-22
 
 ## New Features
